--- a/deploy/crd_gen.yaml
+++ b/deploy/crd_gen.yaml
@@ -2,9 +2,9 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
-  name: mxjobs.qiniu.com
+  name: mxjobs.ava.qiniu.com
 spec:
-  group: qiniu.com
+  group: ava.qiniu.com
   names:
     kind: MXJob
     listKind: MXJobList
