--- a/deploy/crd_templ.yaml
+++ b/deploy/crd_templ.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: mxjobs.qiniu.com
+  name: mxjobs.ava.qiniu.com
 spec:
-  group: qiniu.com
+  group: ava.qiniu.com
   names:
     kind: MXJob
     listKind: MXJobList
